--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,16 +1,164 @@
-/* style.css */
-.random-item {
-    background-color: #f9f9f9;
-    padding: 10px;
-    border: 1px solid #ddd;
-    margin: 10px;
-    font-family: Arial, sans-serif;
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: #241248; 
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
 }
-.random-item h2 {
-    font-size: 20px;
-    color: #333;
+
+.container {
+  max-width: 800px; 
+  margin: 0 auto;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 30px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); 
 }
-.random-item p {
-    font-size: 14px;
-    color: #666;
+
+.button {
+  background-color: #321f58;
+  color: #fff;
+  border: none;
+  padding: 20px 40px; 
+  font-size: 20px;
+  font-weight: bold; 
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s; 
+  display: block; 
+  margin: 0 auto; 
+  text-align: center; 
+  width: 250px; 
+  font-family: Arial, sans-serif; 
+}
+
+.button:hover {
+  background-color: #422e68;
+}
+
+
+
+.result {
+  margin-top: 30px;
+}
+
+h1 {
+  color: #d8d8d8; 
+  text-align: center;
+}
+
+h2 {
+  color: #d8d8d8;
+}
+
+.successful {
+  color: #d8d8d8; 
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+  font-size: 20px; 
+}
+
+.result {
+  background-color: #321f58; 
+  border-radius: 8px; 
+  padding: 20px; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  margin: 0 auto; 
+  width: 70%; 
+  max-width: 400px; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+}
+
+.signup {
+  background-color: #321f58;
+  color: #fff;
+  border: none;
+  padding: 20px 45px; 
+  font-size: 22px; 
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  display: block; 
+  margin: 0 auto; 
+}
+
+.signup:hover {
+  background-color: #422e68;
+}
+
+
+.div {
+  display: inline-block; 
+}
+
+.pengu {
+  position: fixed;
+  bottom: 50px; 
+  left: 40px; 
+  width: 300px; 
+  height: auto; 
+}
+
+.logo {
+  position: fixed;
+  bottom: 50px; 
+  right: 40px; 
+  width: 300px; 
+  height: auto; 
+}
+
+.loginbox {
+  color: #d8d8d8; 
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+  font-size: 20px; 
+  background-color: #321f58; 
+  border-radius: 8px; 
+  padding: 20px; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  margin: 0 auto; 
+  width: 70%; 
+  max-width: 400px; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+}
+
+.centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+}
+
+.gwen {
+  position: fixed;
+  bottom: 50px; 
+  left: 40px; 
+  width: 400px; 
+  height: auto; 
+}
+
+.lux {
+  position: fixed;
+  bottom: 50px; 
+  right: 40px; 
+  width: 400px; 
+  height: auto; 
+}
+
+input[type="email"],
+input[type="password"],
+input[type="text"]  {
+    background-color: #432f6b;
+    border-radius: 8px;
+    padding: 8px;
+    font-size: 16px;
+    width: 250px;
+    color: #d8d8d8; 
+    text-align: center;
+    font-family: 'Arial', sans-serif; 
 }
